--- a/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.html
+++ b/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.html
@@ -1,7 +1,7 @@
 <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
- --><div class="card">
-    <h3 class="card-header text-center py-4" style="background-color: rgba(124, 171, 241, 0.473); 
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
+ -->
+ <!-- <div class="card"> -->
+    <h3 style="text-align: center; font-family: 'Times New Roman', Times, serif">
         <strong>Add/Edit Grad</strong>
     </h3> 
 
@@ -11,6 +11,7 @@
         <div class="alert alert-primary" role="alert">
             Fields marked with (*) are compulsory
         </div>
+        
         <!-- Form -->
         <form (ngSubmit)="onSubmit()" ngNativeValidate>
 
