--- a/assess-frontend/src/app/report/front/front.component.html
+++ b/assess-frontend/src/app/report/front/front.component.html
@@ -37,8 +37,8 @@
                  
                 <div class="col-sm-3">
                      
-                    <select formControlName="years" class="form-control" (change)="onChangeYear($event.target.value)" [(ngModel)]="selectedyear">
-                      <option [disabled]="true" [selected]= "true">Select year...</option>
+                    <select formControlName="years"  class="form-control" (change)="onChangeYear($event.target.value)" [(ngModel)]="selectedyear">
+                      <option>Select year...</option>
                       <!-- <option *ngFor="let year of years" [value]="year.name">{{year.name}}</option> -->
                       <option *ngFor="let year of years" [value]="year">{{year}}</option>
                     </select> 
@@ -46,7 +46,7 @@
                 <div class="col-sm-3">
                   
                   <select formControlName="batches" class="form-control" (change)="onChangeBatch($event.target.value)" [(ngModel)]="selectedbatch">
-                    <option [disabled]="true" [selected]= "true">Select batch...</option>
+                    <option >Select batch...</option>
                     <option *ngFor="let batchinfo of batches" [value]="batchinfo">{{batchinfo}}</option>
                   </select>
                
@@ -54,7 +54,7 @@
                 <div class="col-sm-3">
                   
                   <select formControlName="tests" class="form-control" [(ngModel)]="selectedtest">
-                    <option [disabled]="true" [selected]= "true">Select test...</option>
+                    <option>Select test...</option>
                     <option *ngFor="let test of tests" [value]="test">{{test}}</option>
                   </select>
                 </div>
