changed employee demand access on app.component

--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -241,7 +241,6 @@
 				<img src="../../../assets/Images/back3.jpg" alt="accolite">
 			</div>
 		</div>
-	</div>
 	<!-- Left and right controls -->
 	<a class="left carousel-control" href="#myCarousel" data-slide="prev">
 		<span class="glyphicon glyphicon-chevron-left"></span>
@@ -251,6 +250,8 @@
 		<span class="glyphicon glyphicon-chevron-right"></span>
 		<span class="sr-only">Next</span>
 	</a>
+</div>
+
 <br>
 <br>
 	<p>Accolite is a global IT Services company headquartered in Dallas, USA with offices in India. Recognized for providing cutting edge information technology services with a proven track record of being totally client focussed, Accolite promises efficient, affordable and on-time IT services.</p>
@@ -480,3 +481,7 @@
 <!-- </body>
 
 </html> -->
+
+<footer class="container-fluid text-center" style=" background-color: #f2f2f2;padding: 25px;margin-top: 30px">
+	<p style="text-align: center">Only the Best Technical Minds</p>
+  </footer>
