--- a/assess-frontend/src/app/report/student-details/student-details.component.html
+++ b/assess-frontend/src/app/report/student-details/student-details.component.html
@@ -62,7 +62,7 @@
                         <th>Test Name</th>
                           <th>Score</th>
                           
-                          <!-- <th>Rank</th> -->
+                          <th>Rank</th>
                           
                     </tr>
                 </thead>
@@ -78,7 +78,7 @@
                     <td>{{c.gradTest.testId}}</td>
                     <td>{{c.gradTest.testName}}</td>
                     <td>{{c.score}}</td>
-                    
+                    <td>{{c.gradRank}}</td>
                     <!-- <td>{{i+1}}</td> -->
                    
                 </tr> 
