--- a/frontend/src/app/demand/demanddetails/demanddetails.component.html
+++ b/frontend/src/app/demand/demanddetails/demanddetails.component.html
@@ -14,7 +14,7 @@
                 <th>DEMAND</th>
                 <th>LOCATION</th>
                 <th>EXPECTED START</th>
-                <th>STATUS</th>
+                <!-- <th>STATUS</th> -->
                 <th>COMMENTS</th>
               </thead>
               <tbody *ngFor="let hm of item.value | keyvalue">
@@ -23,7 +23,7 @@
                     <td>{{demand.demandCount}}</td>
                     <td>{{demand.location}}</td>
                     <td>{{demand.start_time}}</td>
-                    <td>{{demand.status}}</td>
+                    <!-- <td>{{demand.status}}</td> -->
                     <td>{{demand.comments}}</td>
                   </tr>
               </tbody>
