--- a/frontend/src/app/report/student-details/student-details.component.html
+++ b/frontend/src/app/report/student-details/student-details.component.html
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
       </head>
       <body>
-            <div class=" panel-body" width=vw; height=vh;>
+            <div *ngIf="isLoaded" class=" panel-body" width=vw; height=vh;>
     
                     <table class=" table-striped ">
                         <thead class="thead-dark">
