grad details  button added

--- a/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.html
+++ b/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.html
@@ -35,6 +35,7 @@
             <div class="col-md-2">
                 <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile"
                 (click)="updateGrad()">
+                <input type="button" class="back-btn"  value="Back" *ngIf="adminRole" [routerLink]="['/admin']"  >
             </div>
         </div>
         <div class="row">
