--- a/frontend/src/app/gradManagement/admin/showgrads/showgrads.component.html
+++ b/frontend/src/app/gradManagement/admin/showgrads/showgrads.component.html
@@ -6,10 +6,18 @@
             <h1>Grad Management</h1>
         </div> -->
         <!-- <h1>Grad Management</h1> -->
-        <i style="font-size:24px;color:rgba(54, 53, 53, 0.644)" class="fa">&#xf002;</i>
-        <input class="filter" type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By Name">
-        <input class="filter" type="text" id="searchById" [(ngModel)]="empCodeSearch" name="searchById" placeholder="Search By Employee Code">
-    
+        <!-- <i style="font-size:24px;color:rgba(54, 53, 53, 0.644)" class="fa">&#xf002;</i> -->
+     
+                
+        
+        <div class="panel-body">
+            <input class="filter" type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By Name">
+            <input class="filter" type="text" id="searchById" [(ngModel)]="empCodeSearch" name="searchById" placeholder="Search By Employee Code">
+            <span class="glyphicon glyphicon-search"></span>
+
+        </div>
+        
+
         <div class="tableFixHead panel-body" >
 
             <table class="table table-striped" matSort (matSortChange)="sortData($event)">
