--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -23,9 +23,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a  routerLink="/view">Timesheets</a></li>
-                <li><a *ngIf="admin " routerLink="/course">Courses</a></li>
-                <li><a *ngIf="admin" routerLink="/trainer">Trainers</a></li>
-                <li><a *ngIf="admin" routerLink="/batch">Batches</a></li>
+                <li><a  routerLink="/course">Courses</a></li>
+                <li><a  routerLink="/trainer">Trainers</a></li>
+                <li><a  routerLink="/batch">Batches</a></li>
             </div>
             </li>     
 
