--- a/frontend/src/app/courses/tmanage/tmanage.component.html
+++ b/frontend/src/app/courses/tmanage/tmanage.component.html
@@ -1,5 +1,5 @@
 <!-- <app-header select="AddTrainer"></app-header> -->
-<div class="container">
+<div class="container" style="font-family: 'Times New Roman', Times, serif">
   <h2 style="text-align: center">Trainers</h2>
 
   <div class="row">
