--- a/frontend/src/app/courses/cmanage/cmanage.component.html
+++ b/frontend/src/app/courses/cmanage/cmanage.component.html
@@ -1,11 +1,10 @@
 <!-- <app-header select="AddCourse"></app-header> -->
-<div class="container">
+<div class="container" style="font-family: 'Times New Roman', Times, serif">
   <div class="row">
     <h2 style="text-align: center">Courses</h2>
     <div class="col-md-7">
       <h2></h2><br>
       <div style="overflow-y:auto; max-height: 350px">
-
         <table class="table table-bordered tableFixHead">
           <thead class="thead-dark">
             <tr>
@@ -23,28 +22,18 @@
           </tbody>
         </table>
       </div>
-
-
     </div>
 
     <div class="col-md-5">
-
-
-      <div class="col-md-8" style="margin-left: 120px">
+      <div class="col-md-5" style="margin-left: 140px">
         <h2></h2><br>
         <div class="form-group">
           <label style="font-size: medium">Course Name:</label><br>
-          <!-- <div class="input-group"> -->
           <input type="text" class="form-control" [(ngModel)]="courseName" placeholder="Enter the Course Name"><br>
-          <!-- <span class="input-group-btn"> -->
           <button type="button" [disabled]="!courseName" class="btn btn-primary btn-sm" (click)="submit()">Add course
           </button>
-          <!-- </span> -->
-          <!-- </div> -->
-
         </div>
       </div>
     </div>
-
-
+  </div>
   </div>
